[package]
name = "theai"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json", "native-tls-alpn"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
